[gd_scene load_steps=15 format=2]

[ext_resource path="res://Main Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Assets/NewGameButtonHover.png" type="Texture" id=3]
[ext_resource path="res://Assets/NewGameButtonNorm.png" type="Texture" id=4]
[ext_resource path="res://Assets/Top Panel.png" type="Texture" id=5]
[ext_resource path="res://GameEnd.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Circle.png" type="Texture" id=7]
[ext_resource path="res://Assets/Cross.png" type="Texture" id=8]
[ext_resource path="res://Assets/BlueWin.png" type="Texture" id=9]
[ext_resource path="res://Assets/RedWin.png" type="Texture" id=10]
[ext_resource path="res://Assets/MainMenuButtonNorm.png" type="Texture" id=11]
[ext_resource path="res://Assets/MainMenuButtonHover.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Circle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Cross",
"speed": 5.0
} ]

[sub_resource type="Theme" id=2]

[node name="Gam" type="Control"]
margin_right = 900.0
margin_bottom = 1100.0
script = ExtResource( 2 )

[node name="MainBoard" parent="." instance=ExtResource( 1 )]
offset = Vector2( 2, 0 )

[node name="Circle" type="Sprite" parent="."]
position = Vector2( -50, 0 )
texture = ExtResource( 7 )

[node name="Cross" type="Sprite" parent="."]
position = Vector2( -59, -48 )
texture = ExtResource( 8 )

[node name="BlueWin" type="Sprite" parent="."]
position = Vector2( -201, 205 )
texture = ExtResource( 9 )
offset = Vector2( 4, -2 )

[node name="RedWin" type="Sprite" parent="."]
position = Vector2( -207, 517 )
texture = ExtResource( 10 )
offset = Vector2( 4, -2 )

[node name="TopPanel" type="Sprite" parent="."]
position = Vector2( 450, 50 )
texture = ExtResource( 5 )

[node name="Turner" type="AnimatedSprite" parent="TopPanel"]
position = Vector2( 63, 0 )
frames = SubResource( 1 )
animation = "Circle"

[node name="Restart" type="TextureButton" parent="TopPanel"]
margin_left = 325.0
margin_top = -30.0
margin_right = 415.0
margin_bottom = 42.0
theme = SubResource( 2 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="ToMenu" type="TextureButton" parent="TopPanel"]
margin_left = -415.0
margin_top = -30.0
margin_right = -325.0
margin_bottom = 30.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )

[node name="GameEnd" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="TopPanel/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="TopPanel/ToMenu" to="." method="_on_ToMenu_pressed"]
[connection signal="back" from="GameEnd" to="." method="_on_GameEnd_back"]
[connection signal="newGame" from="GameEnd" to="." method="_on_GameEnd_newGame"]
